# WSharp

./: Cargo.toml  LICENSE
.github/workflows/: ci.yml  release.yml
benchmarks/: fib.jl  fib.js  fib.lua  fib.ws  primes.jl  primes.js  primes.lua  primes.ws  run.sh  sum.jl  sum.js  sum.lua  sum.ws
crates/wsharp_ast/: Cargo.toml
crates/wsharp_ast/src/: decl.rs  expr.rs  lib.rs  pattern.rs  stmt.rs  types.rs
crates/wsharp_cli/: Cargo.toml
crates/wsharp_cli/src/: main.rs  repl.rs
crates/wsharp_codegen/: Cargo.toml
crates/wsharp_codegen/src/: aot.rs  codegen.rs  error.rs  jit.rs  lib.rs
crates/wsharp_driver/: Cargo.toml
crates/wsharp_driver/src/: compile.rs  error.rs  lib.rs  session.rs
crates/wsharp_driver/tests/: async.rs  dispatch.rs  thread.rs
crates/wsharp_hir/: Cargo.toml
crates/wsharp_hir/src/: hir.rs  lib.rs  lower.rs  resolve.rs  typecheck.rs
crates/wsharp_lexer/: Cargo.toml
crates/wsharp_lexer/src/: lexer.rs  lib.rs  span.rs  token.rs
crates/wsharp_mir/: Cargo.toml
crates/wsharp_mir/src/: build.rs  cfg.rs  coroutine.rs  lib.rs  mir.rs  pretty.rs
crates/wsharp_parser/: Cargo.toml
crates/wsharp_parser/src/: decl.rs  error.rs  expr.rs  lib.rs  parser.rs  stmt.rs
crates/wsharp_runtime/: Cargo.toml
crates/wsharp_runtime/src/: cycle.rs  executor.rs  lib.rs  rc.rs
crates/wsharp_runtime/src/thread/: ffi.rs  gc.rs  handle.rs  mod.rs  mutex.rs
crates/wsharp_stdlib/: Cargo.toml
crates/wsharp_stdlib/src/: lib.rs
crates/wsharp_types/: Cargo.toml
crates/wsharp_types/src/: dispatch.rs  http_status.rs  inference.rs  lib.rs  types.rs
examples/: hello.ws
