[workspace]
resolver = "2"
members = [
    "crates/wsharp_lexer",
    "crates/wsharp_parser",
    "crates/wsharp_ast",
    "crates/wsharp_types",
    "crates/wsharp_hir",
    "crates/wsharp_mir",
    "crates/wsharp_codegen",
    "crates/wsharp_runtime",
    "crates/wsharp_stdlib",
    "crates/wsharp_driver",
    "crates/wsharp_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Ofek"]

[workspace.dependencies]
# Internal crates
wsharp_lexer = { path = "crates/wsharp_lexer" }
wsharp_parser = { path = "crates/wsharp_parser" }
wsharp_ast = { path = "crates/wsharp_ast" }
wsharp_types = { path = "crates/wsharp_types" }
wsharp_hir = { path = "crates/wsharp_hir" }
wsharp_mir = { path = "crates/wsharp_mir" }
wsharp_codegen = { path = "crates/wsharp_codegen" }
wsharp_runtime = { path = "crates/wsharp_runtime" }
wsharp_stdlib = { path = "crates/wsharp_stdlib" }
wsharp_driver = { path = "crates/wsharp_driver" }

# LLVM bindings - using inkwell for safe Rust bindings
inkwell = { version = "0.7", features = ["llvm18-1"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
indexmap = "2.7"
typed-arena = "2.0"
rustc-hash = "2.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
