[package]
name = "wsharp_ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Abstract Syntax Tree definitions for the W# programming language"

[dependencies]
wsharp_lexer.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
