[package]
name = "wsharp_driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compilation driver for the W# programming language"

[dependencies]
wsharp_lexer.workspace = true
wsharp_parser.workspace = true
wsharp_ast.workspace = true
wsharp_types.workspace = true
wsharp_hir.workspace = true
wsharp_mir.workspace = true
wsharp_codegen.workspace = true
inkwell.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[features]
default = ["jit"]
jit = []

[dev-dependencies]
pretty_assertions.workspace = true
