[package]
name = "wsharp_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime library for the W# programming language"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
thread-debug = []

[dev-dependencies]
pretty_assertions.workspace = true
