[package]
name = "wsharp_types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Type system and dispatch resolution for the W# programming language"

[dependencies]
wsharp_ast.workspace = true
thiserror.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
